fix: improved readability

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -14,7 +14,7 @@
 }
 
 .hyundai-colours {
-    background-color: #6490e6;
+    background-color: #2f5bb3;
     color: #fff;
 }
 
